<resources>
    <string name="app_name">Prolab Mobile 5</string>
    <string name="title_dossier_detail">Détails du Dossier</string>
    <string name="action_settings">Paramétres</string>
    <string name="title_activity_resultat_dos">Détails du Dossier</string>
    <string name="title_activity_settings">Paramétres</string>
    <string name="pref_header_general">Général</string>
    <string name="se_connecter">Se connecter</string>
    <string name="serveraddr">Adresse du serveur</string>
    <string name="numport">Numéro de port</string>
    <string name="sqlinstance">Instance SQL</string>
    <string name="prolabver">Version Prolab</string>
    <string name="nomuserbd">Nom d\'utilisateur de la base de données</string>
    <string name="pwdbd">Mot de passe de l\'utilisateur de la base de données</string>
    <string name="userprolab">Nom de l\'utilisateur Prolab</string>
    <string name="pwdprolab">Mot de passe de l\'utilisateur Prolab</string>
    <string name="info1">Veuiller valider les paramètres de connexion dans l\'ecran paramétres</string>
    <string name="connect_encours">Connexion en cours ...</string>
    <string name="err1">Verifiez les paramétres du connection avec le serveur.</string>
    <string name="err2">Nom d\'utilisateur ou mot de passe incorrectes.</string>
    <string name="err3">Une erreur inconnue s\'est produite.</string>
    <string name="please_wait">Veuillez Patienter ...</string>
    <string name="loading">Chargement</string>
    <string name="liste_doss">Liste des dossiers</string>
    <string name="rech_par_pat">Recherche</string>
    <string name="err">Dossier Analyse non initialisé.</string>
    <string name="msg1">Dossier validé avec succès</string>
    <string name="msg2">Echec de validation</string>
    <string name="msg3">Validation annulée avec succès</string>
    <string name="msg4">Opération échouée !!</string>
    <string name="mr">Mr</string>
    <string name="mme">MME</string>
    <string name="enf">Enf</string>
    <string name="online">Validation en ligne</string>
    <string name="nbrdoss">Nombre de dossiers du</string>
    <string name="au">au</string>
    <string name="doss">Dossiers.</string>
    <string name="valder_annuler_validation">Validation</string>
    <string name="error">Une erreur s\'est produite.</string>
    <string name="valid">Validé</string>
    <string name="imprim">Imprimé</string>
    <string name="livr">Livré</string>
    <string name="ant_riotit">antériotité</string>
    <string name="medecin">medecin</string>
    <string name="appeler">Appeler</string>
    <string name="nd">Non Disponible</string>
    <string name="signer">Signer</string>
    <string name="date_du">Date</string>
    <string name="date_au">Date au</string>
    <string name="resultat_a_controller">Résultat à contrôler</string>
    <string name="commentaire">Commentaire</string>
    <string name="sign1">Signature effectuée avec succès.</string>
    <string name="sign2">Signature enlevée avec succès.</string>
    <string name="unsign">Enlever la signature</string>
    <string name="sign">Signer le dossier</string>
    <string name="atb">Antibiogramme</string>
    <string name="dossvalid">Dossier Validé, Modification impossible.</string>
    <string name="antibiotique">Antib. :</string>
    <string name="r_sultats">Rés. :</string>
    <string name="rafra_chir">Rafraîchir</string>
    <string name="cancel">Annuler</string>
    <string name="q1">Que voulez vous faire ?</string>
    <string name="q2">Voulez vous supprimer ?</string>
    <string name="validDoss">Valider le Dossier</string>
    <string name="signDoss">Signer le Dossier</string>
    <string name="suppValid">Supprimer la Validation</string>
    <string name="suppSign">Signature</string>
    <string name="suppBoth">Validation et Signature</string>
    <string name="valider">Valider</string>
    <string name="annuler">Annuler</string>
    <string name="rien_a_signaler">Rien à signaler</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="exitmsg">Voulez vous arrêter ?</string>
    <string name="signed">Signé</string>
    <string name="by_sama_consulting">By Sama-Consulting</string>
    <string name="prolab_mobile">Prolab Mobile</string>
    <string name="dossier_pr_c_dent">Dossier précédent</string>
    <string name="dossier_suivant">Dossier suivant</string>
    <string name="updsuccs">État mise à jour avec succès</string>
    <string name="result">Resultat</string>
    <string name="erreur_internet">Veuillez vérifier votre connexion internet</string>
    <string name="db_user">prolab</string>
    <string name="db_pwd">___rootsama</string>
    <string name="port">7733</string>
    <string name="version">Prolab5</string>
</resources>
