<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splashScreenLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.sama_consulting.prolabmobile5.Splash">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        app:srcCompat="@drawable/logosama" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prolab_mobile"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/colo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/by_sama_consulting"
        android:textColor="@color/greyMed"
        android:textSize="24sp" />
<Button
    android:layout_marginTop="12dp"
    style="@style/Widget.AppCompat.Button.Colored"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="checkCredentials"
    android:text="@string/se_connecter"/>
</LinearLayout>
