<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/resultatdos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sama_consulting.prolabmobile5.ResultatDosActivity">

    <LinearLayout
        android:id="@+id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="1dp"
        android:background="@drawable/shadow"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp">

            <TextView
                android:id="@+id/nenreg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/dateprelevement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="end|center_vertical">

                <ImageView
                    android:id="@+id/signe"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_margin="2dp"
                    android:contentDescription="@string/signed"
                    app:srcCompat="@drawable/certificate" />

                <ImageView
                    android:id="@+id/valide"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_margin="2dp"
                    android:contentDescription="@string/valid"
                    app:srcCompat="@drawable/check" />

                <ImageView
                    android:id="@+id/imprime"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_margin="2dp"
                    android:contentDescription="@string/imprim"
                    app:srcCompat="@drawable/printer" />

                <ImageView
                    android:id="@+id/livre"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_margin="2dp"
                    android:contentDescription="@string/livr"
                    app:srcCompat="@drawable/send" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lypat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="4dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="64dp"
                    android:layout_height="48dp" />

                <TextView
                    android:id="@+id/age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:id="@+id/patient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="14sp" />

                <LinearLayout
                    android:id="@+id/lymedecin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:visibility="gone"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:gravity="center_vertical">

                        <ImageView
                            android:id="@+id/imgMed"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            app:srcCompat="@drawable/male_doc" />

                        <TextView
                            android:id="@+id/medecin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:textColor="@color/colorPrimary"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:gravity="center_vertical">

                        <ImageView
                            android:id="@+id/call"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:background="@drawable/phonecall" />

                        <TextView
                            android:id="@+id/gsmmedecin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:clickable="true"
                            android:textColor="@color/colorPrimary"
                            android:textSize="12sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/dossierdetail_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_layout"
        android:layout_margin="1dp"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        tools:context="com.sama_consulting.prolabmobile5.DossierDetailFragment"
        tools:listitem="@layout/dossierdetail_list_content" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp">

        <android.support.design.widget.FloatingActionButton

            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bacteria"
            android:gravity="center"
            android:layout_marginTop="70dp"
            android:backgroundTint="#bee591"
            android:elevation="0dp"
            android:visibility="gone"/>

        <android.support.design.widget.FloatingActionButton
            android:layout_marginTop="4dp"
            android:id="@+id/fab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/colorAccent"
            android:src="@drawable/ic_check"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
</RelativeLayout>
